# the-bootstrap-approach

./: .coveragerc  .git-blame-ignore-revs  .gitignore  LICENSE  NOTICE  README.md  flake.nix  general_aviation_constant_speed_propeller_chart.ipynb  pyproject.toml  requirements.txt  setup.cfg  tba.ipynb  the_bootstrap_approach.ipynb  tox.ini
.github/workflows/: continuous_integration.yml
examples/: bootstrap_cruise_performance_table.ipynb  how_full_throttle_v-speeds_vary_with_density_altitude.ipynb  how_thrust_and_drag_vary_with_density_altitude.ipynb  list_foreflight_profiles.py  n51sw_dataplate.py  performance_profiles.ipynb  power-available_power-required_analysis.ipynb  steep_spiral.ipynb  steep_spiral_3d.ipynb  takeoff_climb_performance_analysis.ipynb  upload_to_foreflight.py  vb-910_asi_calibration_curve.xlsx
examples/dakota_checklist/: dakota.normal_procedures.tex  dakota.performance_charts.tex  dakota.tex
examples/dakota_performance/: __init__.py  best_angle_of_climb.py  best_range.py  best_rate_of_climb.py  climb_performance.py  cruise_climb.py  cruise_performance.py  latex.py  optimum_cruise.py  sixty_five_percent_power.py
examples/dakota_performance_charts/: dakota.performance_charts.tex  dakota.tex
scripts/: test  update
tests/: test_airspeed_calibration.py  test_bootstrap_cruise_performance_table.py  test_equations.py  test_propeller_chart.py  test_standard_atmosphere.py
the_bootstrap_approach/: airspeed_calibration.py  conditions.py  dataplate.py  equations.py  mixture.py  performance.py  propeller_chart.py
(+1 files in other folders)
