[metadata]
name = the-bootstrap-approach
description = TBD.
long_description = file: README.md
url = https://github.com/rbreslow/the-bootstrap-approach
author = Rocky Breslow
author_email = 1774125+rbreslow@users.noreply.github.com
license = GNU Affero General Public License v3
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
keywords =
    aircraft
    bootstrap
    performance

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy >=1.22

[options.extras_require]
develop =
    black[jupyter] >=22.1
    flake8 >=4.0
examples =
    ipykernel >=6.5
    ipywidgets >=7.6
    jupyterlab >=3.2
    matplotlib >=3.4
    numpy >=1.21
    matplotlib-label-lines >=0.4
    tabulate >=0.8
tests =
    tox >=3.24
    tox-gh-actions >=2.9

[flake8]
extend-exclude = .venv
extend-ignore = E203, W605
max-line-length = 88
